# skse-plugin-invoke-function-from-another-plugin

./: API DLL.code-workspace  CMakeLists.txt  CMakePresets.json  README.md  plugin.cpp  skyrimse.ppj
Images/: MyMod_Logo.xcf
PluginThatCallsOtherPluginsFunction/: CMakeLists.txt  plugin.cpp
PluginWithFunction/: CMakeLists.txt  PluginWithFunction.cpp  plugin.cpp
PluginWithFunction/include/: PluginWithFunction.h
Scripts/: ExampleScript.pex
Scripts/Source/: ExampleScript.psc
cmake/: CommonLibNG.cmake  config.cmake.in
include/: MySkseLibraryExample.h  PapyrusInterface.h  SkseLibraryDemo.h
include/MySkseLibraryExample/: MyDemoSingleton.h
include/MySkseLibraryExample/Implementation/: MyDemoSingletonImpl.h
include/SkseLibraryDemo/: MyDemoSingleton.h
include/SkseLibraryDemo/Implementation/: MyDemoSingletonImpl.h
include_implementation/MySkseLibraryExample/: MyDemoSingletonImpl.h
src/: PCH.h  Plugin.cpp
src/MySkseLibraryExample/: MyDemoSingletonImpl.cpp  MySkseLibraryExample.cpp
